valueOf change and case pattern fix